# togglReports-UI

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  app.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  report.rs  toggl_api.rs
src/lib/: DateInput.svelte  ModeSelector.svelte  NavBar.svelte  Snackbar.svelte  WorkspaceSelector.svelte  types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/settings/: +page.svelte
src/theme/: _smui-theme.scss
static/: smui.css
