[package]
name = "toggl_reports"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
version= "0.0.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "updater", "http-all", "fs-exists", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.18", features = ["json"] }
confy = "0.5.1"
chrono = "0.4.26"
csv = "1.2.2"
directories = "5.0.1"
encoding_rs = "0.8.32"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
